# openhome-approval-voice

./: .gitignore  README.md  conftest.py  pyproject.toml  run_demo.py
approval_voice/: __init__.py  ability.py  bridge.py  codec.py  fileio.py  poller.py  renderer.py  sample.py  schema.py  source.py  speak.py  storage.py  transport.py
deploy/: DEPLOY.md  build_zip.py  sandbox_lint.py  seed_queue.py
docs/: design.md  speech-test-runbook.md
examples/: announce_queue.json
openhome_ability/: background.py  main.py  requirements.txt
pc_exporter/: __init__.py  __main__.py  core.py  push.py  requirements.txt  server.py
tests/: exporter_helpers.py  test_background.py  test_exporter_cli.py  test_exporter_core.py  test_exporter_loopback.py  test_exporter_server.py  test_live_pull.py  test_one_way.py  test_outbound_one_way.py  test_pipeline.py  test_pull.py  test_push.py  test_push_loopback.py  test_renderer.py  test_sandbox_clean.py  test_sandbox_compliance.py  test_schema.py  test_source.py
