[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "openhome-approval-voice"
version = "0.3.0"  # M3.1 add-capability sandbox-compliant on-device ability
description = "One-way voice readout of Secretary awaiting_user approval gates (OpenHome DevKit, on-device verbatim)"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["approval_voice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
